Fix thumbnail display in representation viewer
On the object detail view, when there are more than two images,
trying to display images in any non-sequential order will trigger
a display bug. For example, after page load the first image is
displayed, then, clicking on the third image will display it,
but then, clicking on the second image won’t do anything.

Jcarousel displays images concatenated as inline elements and
horizonrally scrolls around to display the correct image. However,
in some situations, an image has a zero-height and does not take
any space, resulting in misalignment of horizontal scroll position.
CSS min-height ensures images will always take their allocated width.

--- a/themes/default/assets/pawtucket/css/main.css
+++ b/themes/default/assets/pawtucket/css/main.css
@@ -1636,6 +1636,7 @@ a.browseRemoveFacet img {
 }
 .detail #repViewerCarousel li{
 	text-align:center;
+	min-height:1px;
 }
 .detail .repViewerCont img{
 	width:100%;
